Solution was added